src/test/resources/examples/invalid/IncompleteFXRoot.fxml
<fx:root xmlns:fx="http://javafx.com/fxml"/>